--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -8,7 +8,10 @@
   "shape_square": "Квадрат",
   "shape_triangle": "Треугольник",
   "emptyHint": "Загрузите изображение, чтобы начать редактирование",
-  "language": "Язык"
+  "language": "Язык",
+  "undo": "Отменить",
+  "redo": "Повторить",
+  "showOriginal": "Показать оригинал"
 }
 
 
