--- a/src/locales/uk/translation.json
+++ b/src/locales/uk/translation.json
@@ -8,7 +8,10 @@
   "shape_square": "Квадрат",
   "shape_triangle": "Трикутник",
   "emptyHint": "Завантажте зображення, щоб почати редагування",
-  "language": "Мова"
+  "language": "Мова",
+  "undo": "Скасувати",
+  "redo": "Повторити",
+  "showOriginal": "Показати оригінал"
 }
 
 
